@startuml
'https://plantuml.com/class-diagram

class FileUploaderService

abstract class FileUploadUseCase {
    + useCaseFactory(String: type) : FileUploadUseCase
}

interface FileValidator

FileUploadUseCase --> FileUploaderService
FileUploaderService --> FileValidator

FileUploadUseCase <|-- BalanceFileUploadUseCase

FileValidator <|-- BalanceFileValidator
BalanceFileUploadUseCase --> BalanceFileValidator

FileUploadUseCase <|-- PTAFileUploadUseCase
FileValidator <|-- PTAFileValidator

PTAFileUploadUseCase --> PTAFileValidator

@enduml